Publikation: Nonabelian basechange theorems hinzugefügt

--- a/public/maths/index.html
+++ b/public/maths/index.html
@@ -183,12 +183,9 @@
               </div>
               <p>     
                 <div class="files">
-                  <!--
-                  <a href="https://academic.oup.com/imrn/advance-article-abstract/doi/10.1093/imrn/rnad018/7034035?redirectedFrom=fulltext">
-                    IMRN
+                  <a href="https://londmathsoc.onlinelibrary.wiley.com/doi/full/10.1112/topo.70009">
+                    J. Topol.
                   </a> 
-                  &nbsp;
-                  -->
                   <a href="https://arxiv.org/abs/2304.00938">
                     arXiv
                   </a>
@@ -201,7 +198,6 @@
                   <a href="https://homepages.uni-regensburg.de/~wos07573/index.html">
                     Sebastian Wolf
                   </a>
-                  (to appear in Journal of Topology)
                 </em> 
               </p>
             </div>
