Moved to IHES. Added paper "Condensed homotopy type of a scheme".

--- a/public/maths/index.html
+++ b/public/maths/index.html
@@ -151,6 +151,45 @@
 <div class="tabular-list">
             <div class="tabular-list-item" >
               <div class="title">
+                <a href="https://raw.githubusercontent.com/tholzschuh/uni-files/master/papers/condensed_homotopy_type_of_a_scheme.pdf">
+                  The condensed homotopy type of a scheme
+                </a> 
+                <div class="year">
+                  2025
+                </div>
+              </div>
+              <p>     
+                <div class="files">
+<!--                  <a href="https://londmathsoc.onlinelibrary.wiley.com/doi/full/10.1112/topo.70009">
+                    J. Topol.
+                  </a>
+-->
+                  <a href="https://arxiv.org/abs/2510.07443">
+                    arXiv
+                  </a>
+                </div>
+                <em>with
+                  <a href="https://peterjhaine.github.io">
+                    Peter Haine
+                  </a>,
+                  <a href="https://marcin-lara.github.io">
+                    Marcin Lara
+                  </a>,
+                  <a href="https://www.mathematik.tu-darmstadt.de/fb/personal/details/catrin_mair.de.jsp">
+                    Catrin Mair
+                  </a>,
+                  <a href="https://louismartini.de">
+                    Louis Martini
+                  </a>
+                  , and 
+                  <a href="https://wos07573.github.io/index.html">
+                    Sebastian Wolf
+                  </a>
+                </em> 
+              </p>
+            </div>
+            <div class="tabular-list-item" >
+              <div class="title">
                 <a href="https://raw.githubusercontent.com/tholzschuh/uni-files/master/papers/real-section-conjecture.pdf">
                   On the generalised real Section Conjecture
                 </a> 
@@ -191,11 +230,11 @@
                   </a>
                 </div>
                 <em>with
-                  <a href="https://math.berkeley.edu/~phaine/#">
+                  <a href="https://peterjhaine.github.io">
                     Peter Haine
                   </a> 
                   and 
-                  <a href="https://homepages.uni-regensburg.de/~wos07573/index.html">
+                  <a href="https://wos07573.github.io/index.html">
                     Sebastian Wolf
                   </a>
                 </em> 
@@ -221,11 +260,11 @@
                   </a>
                 </div>
                 <em>with
-                  <a href="https://math.berkeley.edu/~phaine/#">
+                  <a href="https://peterjhaine.github.io">
                     Peter Haine
                   </a> 
                   and 
-                  <a href="https://homepages.uni-regensburg.de/~wos07573/index.html">
+                  <a href="https://wos07573.github.io/index.html">
                     Sebastian Wolf
                   </a>
                 </em> 
@@ -403,7 +442,7 @@
     
 
         </main><footer class="footer">
-    <span>&copy; 2024 Tim Holzschuh</span>
+    <span>&copy; 2025 Tim Holzschuh</span>
 </footer>
 </body>
 </html>
