deploy: b698a59365750388ab25348785e57e2de1c01db0

--- a/maths/index.html
+++ b/maths/index.html
@@ -7,7 +7,9 @@
 </a>,
 <a href=https://louismartini.de>Louis Martini
 </a>, and
-<a href=https://wos07573.github.io/index.html>Sebastian Wolf</a></em></p></div><div class=tabular-list-item><div class=title><a href=https://raw.githubusercontent.com/tholzschuh/uni-files/master/papers/real-section-conjecture.pdf>On the real Section Conjecture in étale homotopy theory</a><div class=year>2025</div></div><p><div class=files><a href=https://arxiv.org/abs/2510.13325>arXiv</a></div><em>Preprint</em></p></div><div class=tabular-list-item><div class=title><a href=https://raw.githubusercontent.com/tholzschuh/uni-files/master/papers/nonabelian_basechange_etale_homotopy.pdf>Nonabelian basechange theorems & étale homotopy theory</a><div class=year>2023</div></div><p><div class=files><a href=https://londmathsoc.onlinelibrary.wiley.com/doi/full/10.1112/topo.70009>J. Topol.
+<a href=https://wos07573.github.io/index.html>Sebastian Wolf.</a><br>With an appendix by
+<a href=https://bogdanzavyalov.com>Bogdan Zavyalov
+</a>.</em></p></div><div class=tabular-list-item><div class=title><a href=https://raw.githubusercontent.com/tholzschuh/uni-files/master/papers/real-section-conjecture.pdf>On the real Section Conjecture in étale homotopy theory</a><div class=year>2025</div></div><p><div class=files><a href=https://arxiv.org/abs/2510.13325>arXiv</a></div><em>Preprint</em></p></div><div class=tabular-list-item><div class=title><a href=https://raw.githubusercontent.com/tholzschuh/uni-files/master/papers/nonabelian_basechange_etale_homotopy.pdf>Nonabelian basechange theorems & étale homotopy theory</a><div class=year>2023</div></div><p><div class=files><a href=https://londmathsoc.onlinelibrary.wiley.com/doi/full/10.1112/topo.70009>J. Topol.
 </a><a href=https://arxiv.org/abs/2304.00938>arXiv</a></div><em>with
 <a href=https://peterjhaine.github.io>Peter Haine
 </a>and
