Made punctuation look less weird

--- a/public/maths/index.html
+++ b/public/maths/index.html
@@ -180,8 +180,8 @@
                   <br>
                   With an appendix by 
                   <a href="https://bogdanzavyalov.com">
-                    Bogdan Zavyalov
-                  </a>.
+                    Bogdan Zavyalov.
+                  </a>
                 </em> 
               </p>
             </div>
@@ -207,7 +207,7 @@
                   </a>
                 </div>
                 <em>
-                  Preprint
+                  Preprint.
                 </em> 
               </p>
             </div>
@@ -235,7 +235,7 @@
                   </a> 
                   and 
                   <a href="https://wos07573.github.io/index.html">
-                    Sebastian Wolf
+                    Sebastian Wolf.
                   </a>
                 </em> 
               </p>
@@ -265,7 +265,7 @@
                   </a> 
                   and 
                   <a href="https://wos07573.github.io/index.html">
-                    Sebastian Wolf
+                    Sebastian Wolf.
                   </a>
                 </em> 
               </p> 
